# TravelVault

./: .gitignore  PRD.md  generate-icons.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: generate-icons.mjs  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/extension/: content.js  manifest.json  popup.html  popup.js
apps/web/: generate-icons.mjs  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/autofill/: route.ts
apps/web/src/app/api/documents/: route.ts
apps/web/src/app/api/documents/[id]/: route.ts
apps/web/src/app/api/passengers/: route.ts
apps/web/src/app/api/passengers/[id]/: route.ts
apps/web/src/app/api/search/: route.ts
apps/web/src/app/api/settings/: route.ts
apps/web/src/app/documents/: page.tsx
apps/web/src/app/expenses/: page.tsx
apps/web/src/app/passengers/: page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/lib/: pdfExtractor.ts
