[package]
name = "travel-vault"
version = "1.0.0"
description = "TravelVault Desktop App"
authors = ["Prakhar Singh"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "api-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
